# keytao-app

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: build-linux.yml  release.yml
crates/keytao-core/: Cargo.toml
crates/keytao-core-ffi/: Cargo.toml  build.rs
crates/keytao-core-ffi/include/: keytao_core.h
crates/keytao-core-ffi/src/: lib.rs
crates/keytao-core/examples/: scheme_smoke.rs  scheme_switch_smoke.rs
crates/keytao-core/src/: lib.rs
crates/keytao-ios-ime/: IMPL.md  Package.swift
crates/keytao-ios-ime/Resources/: Info.plist  KeyTaoApp.entitlements
crates/keytao-ios-ime/Sources/CKeytaoCore/: module.modulemap
crates/keytao-ios-ime/Sources/KeyTaoIOSIME/: KeyTaoIOSBundle.swift  KeyTaoIOSConfig.swift  KeyTaoIOSEngine.swift  KeyTaoIOSKeyboardView.swift  KeyTaoIOSState.swift  KeyTaoIOSTheme.swift  KeyTaoKeyboardViewController.swift
crates/keytao-ios-ime/Sources/KeyTaoIOSIME/Resources/: keytao_ios_ime.json
crates/keytao-linux-ime/: Cargo.toml  IMPL.md  README.md  build.rs
crates/keytao-linux-ime/src/: engine.rs  gnome_ibus_engine.rs  ibus_backend.rs  kimpanel.rs  main.rs  panel.rs  print_globals.rs  tray.rs  wayland_backend.rs  wayland_backend_kde.rs  x11_backend.rs
crates/keytao-macos-ime/: IMPL.md  README.md  build.sh  generate-icons.sh  install.sh
crates/keytao-macos-ime/Resources/: Info.plist  KeyTaoInputSource.icns
crates/keytao-macos-ime/Sources/KeyTaoIME/: CandidatePanel.swift  EngineInit.swift  IMKSetup.swift  ImeTheme.swift  InputController.swift  InputSourceInstaller.swift  ModeIndicatorPanel.swift  main.swift
crates/keytao-theme/: Cargo.toml  README.md  default-keyboard.yaml  default-theme.yaml
crates/keytao-theme/src/: lib.rs
crates/keytao-windows-ime/: Cargo.toml  IMPL.md  README.md  build.rs  resource.rc
crates/keytao-windows-ime/arm64x/: dummy.c  keytao-windows-ime-arm64.def  keytao-windows-ime-x64.def  load-test.c  tsf-input-smoke-test.cpp  tsf-smoke-test.cpp
crates/keytao-windows-ime/src/: candidate_ui.rs  candidate_win.rs  display_attribute.rs  globals.rs  key_event_sink.rs  key_map.rs  language_bar.rs  lib.rs  panel.rs  registration.rs  state.rs  text_service.rs
crates/librime-sys/: Cargo.toml  build.rs
docs/: ime-common-layer.md  ime-implementation-review-report.md  linux-install.md
nix/: home-manager.nix  nixos.nix
print_globals/: Cargo.toml
print_globals/src/: main.rs
scripts/: Dockerfile.linux-builder  android-librime-runtime.sh  appimage-runner.sh  build-ios-ffi.sh  build-ios-librime.sh  build-ios-simulator-smoke-runtime.sh  build-ios.sh  build-librime-windows-arm64.ps1  build-linux.sh  build-macos.sh  build-windows-arm64x.ps1  build-windows-ime.ps1  build-windows.ps1  container-build.sh  fetch-librime-macos.sh  fetch-librime-windows.ps1  fetch-librime.sh  ios-librime-runtime.sh  setup-ios-ime-xcode.rb  sync-version.mjs  verify-ios-ime.sh  verify-linux-bundles.sh  verify-macos-pkg.sh  verify-windows-bundle.ps1
src/: App.tsx
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  rime.rs
src-tauri/windows/: nsis-hooks.nsh
src/components/: AndroidImeOnboarding.tsx  DebugTab.tsx  VirtualLogViewer.tsx
src/components/ui/: color-picker.tsx  popover.tsx  slider.tsx
