[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/keytao-core",
  "crates/keytao-core-ffi",
  "crates/keytao-linux-ime",
  "crates/keytao-windows-ime", "print_globals",
]

# Shared version pinning across all workspace members
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }
