[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/keytao-core",
  "crates/keytao-core-ffi",
  "crates/keytao-theme",
  "crates/keytao-linux-ime",
  "crates/keytao-windows-ime",
  "print_globals",
]

[workspace.package]
version = "1.2.1-alpha.30"

# Shared version pinning across all workspace members
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
dirs = "5"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
librime-sys = { path = "crates/librime-sys" }
