[package]
name = "keytao-app"
version.workspace = true
description = "KeyTao input method app"
authors = ["Rea <hi@rea.ink>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keytao_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate", "time"] }
bzip2 = { version = "0.5", features = ["static"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
time = { version = "0.3", features = ["parsing"] }
keytao-core = { path = "../crates/keytao-core" }
keytao-theme = { path = "../crates/keytao-theme" }
tracing = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.3", features = ["NSFileManager", "NSString", "NSURL"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
]

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
enigo = "0.2"
tauri-plugin-global-shortcut = "2"
wayland-client = "0.31"
wayland-protocols-misc = { version = "0.3", features = ["client"] }
xkbcommon = { version = "0.7", features = ["wayland"] }
memmap2 = "0.9"
libc = "0.2"
tiny-skia = "0.11"
cosmic-text = "0.12"
