[package]
name = "keytao-core-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "keytao_core_ffi"
crate-type = ["cdylib", "staticlib"]

[target.'cfg(not(target_os = "android"))'.dependencies]
keytao-core = { path = "../keytao-core" }
keytao-theme = { path = "../keytao-theme" }
serde_json = "1"

[build-dependencies]
cbindgen = "0.27"
