[package]
name = "keytao-core"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic librime engine wrapper for KeyTao IME"

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
dirs = { workspace = true }

# The Rust librime API is only linked in the Linux app/IME builds for now.
[target.'cfg(target_os = "linux")'.dependencies]
rime-api = { version = "0.12.2", features = ["serde"] }
