[package]
name = "keytao-core"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic librime engine wrapper for KeyTao IME"

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
dirs = { workspace = true }

# The Rust librime API is linked by native desktop IME frontends.
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
rime-api = { version = "0.12.2", features = ["serde"] }
