[package]
name = "keytao-core"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic librime engine wrapper for KeyTao IME"

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
dirs = { workspace = true }

# The Rust librime API is linked by native platform IME frontends.
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos", target_os = "android", target_os = "ios"))'.dependencies]
librime-sys = "0.4.0"
rime-api = { version = "0.12.2", features = ["serde"] }
