[package]
name = "keytao-windows-ime"
version.workspace = true
edition = "2021"
description = "KeyTao IME — Windows TSF (Text Services Framework) front-end, no ibus/fcitx required"

[lib]
name = "keytao_windows_ime"
crate-type = ["cdylib"]

[target.'cfg(target_os = "windows")'.dependencies]
keytao-core = { path = "../keytao-core" }
serde = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-core = "0.58"

# Panel rendering — same stack as Linux (software rasteriser, no GPU required)
tiny-skia = "0.11"
fontdue = "0.9"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
  "implement",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Registry",
  "Win32_System_LibraryLoader",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
]
